force-app/main/default/objects/Account/fields/Churn_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Score__c</fullName>
    <label>Churn Risk Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>