force-app/main/default/objects/Account/fields/CLV__c.field-meta.xml
<CustomField>
    <fullName>CLV__c</fullName>
    <label>Customer Lifetime Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>