force-app/main/default/objects/Account/fields/Family_Segment__c.field-meta.xml
<CustomField>
    <fullName>Family_Segment__c</fullName>
    <label>Family Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>High Value</fullName><default>false</default><label>High Value</label></value>
            <value><fullName>Growth</fullName><default>false</default><label>Growth</label></value>
            <value><fullName>At-Risk</fullName><default>false</default><label>At-Risk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>