force-app/main/default/objects/Account/fields/Head_of_Family__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Family__c</fullName>
    <label>Head of Family</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family (Head of Family)</relationshipLabel>
    <relationshipName>Family_Head</relationshipName>
</CustomField>