force-app/main/default/objects/Account/fields/Number_of_Active_Policies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Policies__c</fullName>
    <label>Active Policies</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>