force-app/main/default/objects/Account/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hindi</fullName><default>false</default><label>Hindi</label></value>
            <value><fullName>English</fullName><default>false</default><label>English</label></value>
            <value><fullName>Tamil</fullName><default>false</default><label>Tamil</label></value>
            <value><fullName>Telugu</fullName><default>false</default><label>Telugu</label></value>
            <value><fullName>Kannada</fullName><default>false</default><label>Kannada</label></value>
            <value><fullName>Marathi</fullName><default>false</default><label>Marathi</label></value>
            <value><fullName>Bengali</fullName><default>false</default><label>Bengali</label></value>
            <value><fullName>Gujarati</fullName><default>false</default><label>Gujarati</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>