force-app/main/default/objects/Account/fields/Total_Premium_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium_Value__c</fullName>
    <label>Household Premium Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>